[player] Fix (attempt) for overflowing images
For some reason, setting the overflow attribute to any value (!) scales 
the image down correctly.

--- a/player/src/app/unit-view.component.css
+++ b/player/src/app/unit-view.component.css
@@ -42,6 +42,7 @@
   object-fit: contain;
   max-height: 100%;
   max-width: 100%;
+  overflow: auto;
 }
 
 .answers {
